Refactor DeepFijApplication and ScrapingService for improved code clarity and error handling
Updated the DeepFijApplication to streamline imports and enhance password generation logic. Refactored ScrapingService to replace deprecated URL handling with URI.create, improving readability and error handling. Adjusted exception handling to catch specific IOException and InterruptedException for better clarity in error reporting. Enhanced unit tests in AuthControllerTest to ensure response body validation and null safety.